Removed @DBRef from all the venue management models.